fixes alignment on social and nav in toolbar

--- a/app/ContentTypes/_stylestoimport.scss
+++ b/app/ContentTypes/_stylestoimport.scss
@@ -361,9 +361,6 @@ ul.breadcrumb a {
     margin-bottom: -2px;
 }
 
-.navbar .navbar-collapse {
-    text-align: center;
-}
 }
 
 hr {
